# kova

./: .gitignore  .kova-aliases  .wslconfig.example  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  OWNERS.yaml  PROOF_OF_ARTIFACTS.md  README.md  TEST_KOVA.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  audit.toml  backlog.json  build.rs
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml
android/: Cargo.toml  build-apk.sh  deploy-play.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/src/: lib.rs
assets/: app.html  manifest.json  starter.nanobyte  sw.js
assets/datasets/kova_intents/: categories.json  test.csv  train.csv
assets/models/code_vs_english/: categories.json  config.json
assets/models/intent_classifier/: config.json
assets/models/lang_detector/: categories.json  config.json
assets/models/slop_detector/: categories.json  config.json
assets/prompts/: augment-not-intent.mdc  blocking.mdc  community-grant.mdc  header-writer.mdc  hosting-schematic.mdc  tokenization.mdc
assets/training_data/: rust_kinds_raw.jsonl
docs/: BUILD_PLAN_KOVA_FINISH.md  BUILD_STEPS_RECURSIVE_ACADEMY.md  COMPOSER_1.5_ARCHITECTURE.md  DEMO_MODE.md  FINE_DINING_AND_BREATHING.md  GAP_ANALYSIS_SIM_2026-05-06.md  HIVE_BLAZING.md  HIVE_MESH_USAGE_GAP.md  HIVE_STORAGE.md  KOVA_BLUEPRINT.md  MICRO_TRAIN_RESEARCH.md  NANOSIGN.md  NEXT_WORK.md  ONBOARDING.md  PLAN_ALL_THREE_ANALYSIS.md  PLAN_BUILD_KOVA.md  PLAN_DEBIAN_RUST_INFERENCE.md  PLAN_ELICITATION.md  PLAN_EXECUTION_PATH.md  PLAN_GAP_ANALYSIS_SIMULATION.md  PLAN_GUI_CURSOR_PROMPTS.md  PLAN_RECURSIVE_ACADEMY.md  PYRAMID_ARCHITECTURE.md  RESEARCH.md  RESEARCH_MEMORY_MAPPED_MODEL_REGIONS.md  RESEARCH_RECURSIVE_ACADEMY.md  RFC_NATIVE_AGENTIC_STATE_MACHINE.md  RTM_RECURSIVE_ACADEMY.md  RULES_APPLIED.md  SDD_RECURSIVE_ACADEMY.md  SPEED.md  SRS_RECURSIVE_ACADEMY.md  SUBATOMIC_CATALOG.md  TEST_PLAN_RECURSIVE_ACADEMY.md  THEME.md  TOURNAMENT_RESULTS.md  TRIPLE_SIMS_KOVA.md  USER_STORY_PERFECT_RUST.md  USER_STORY_RECURSIVE_ACADEMY.md  VV_PLAN_RECURSIVE_ACADEMY.md  (+6 more)
docs/archive/: KOVA_CONTEXT.md  KOVA_INTENT_RECALIBRATION.md  KOVA_PROJECT_PLACEMENT.md
docs/artifacts/: tournament_2026-03-12.json  tournament_history.json
docs/src/: SUMMARY.md  introduction.md  subatomic-catalog.md
docs/theme/: custom.css
edge/: Cargo.toml
edge/src/: main.rs
exopack/: Cargo.toml
exopack/docs/: ROUGH_DRAFT_EXOPACK.md  testing_architecture.md
exopack/src/: baked_demo.rs  demo.rs  devtools.rs  interface.rs  lib.rs  mock.rs  mural_sim.rs  screenshot.rs  triple_sims.rs  video.rs
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md
ios/: Cargo.toml  build-ios.sh
ios/Kova/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/Kova/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/src/: lib.rs
kova-web/: Cargo.toml  Trunk.toml  index.html
kova-web/src/: app.rs  lib.rs
patches/android-activity/src/: lib.rs
planning/: COMPOSER_1.5_ARCHITECTURE.md  DEMO_MODE.md  HIVE_STORAGE.md  MICRO_TRAIN_RESEARCH.md  NEXT_WORK.md  ONBOARDING.md  PLAN_ALL_THREE_ANALYSIS.md  PLAN_DEBIAN_RUST_INFERENCE.md  PLAN_ELICITATION.md  PLAN_EXECUTION_PATH.md  PLAN_RECURSIVE_ACADEMY.md  RESEARCH.md  RESEARCH_MEMORY_MAPPED_MODEL_REGIONS.md  RTM_RECURSIVE_ACADEMY.md  SDD_RECURSIVE_ACADEMY.md  TEST_PLAN_RECURSIVE_ACADEMY.md  TOURNAMENT_RESULTS.md
schema/: kova_protocol.capnp
scripts/: README.md  bench.sh  binary-size-check.sh  build-all-targets.sh  build_training_data.sh  capture-screenshots.sh  disk-clean.sh  extract_corpus.sh  install-kova.sh  install-pre-push-hook.sh  scrape_training_data.sh  sync-prompts-to-cursor.sh
snap/: snapcraft.yaml
src/: academy.rs  agent_loop.rs  autopilot.rs  backlog.rs  bridge.rs  browser.rs  c2.rs  cargo_cmd.rs  ci.rs  cluster.rs  compute.rs  config.rs  context.rs  context_loader.rs  context_mgr.rs  cursor_prompts.rs  daemon.rs  elicitor.rs  error.rs  factory.rs  feedback.rs  gauntlet.rs  git_cmd.rs  gpu_sched.rs  gui.rs  imagegen.rs  inference.rs  inspect.rs  intent.rs  job_queue.rs  legal.rs  lib.rs  main.rs  main.rs.bak  mcp.rs  mobile_llm.rs  model.rs  moe.rs  nanobyte.rs  node_cmd.rs  (+24 more)
src/cargo/: mod.rs  sandbox.rs
src/codegen/: fix_loop.rs  helpers.rs  mod.rs
src/codegen/strategies/: mod.rs
src/codegen_moe/: assembler.rs  compiler_teacher.rs  extract.rs  mesh.rs  mod.rs  router.rs
src/exopack/: agent_loop_tests.rs  ats_fixtures.rs  baked_demo.rs  cc_features.rs  checkpoint.rs  compaction.rs  demo.rs  devtools.rs  dual_mode.rs  harvest.rs  interface.rs  mock.rs  mod.rs  perm_gate.rs  router_spec.rs  router_training_tests.rs  screenshot.rs  standards_check.rs  tele_tests.rs  tool_call_parser.rs  training_mine_tests.rs  triple_sims.rs  video.rs
src/hive/: config.rs  mod.rs  sync.rs  watcher.rs
src/inference/: cluster.rs  local.rs  mock.rs  mod.rs  providers.rs
src/kernel/: commands.rs  mod.rs  stream.rs
src/legal/: cases.rs  complaints.rs  court.rs  ingest.rs  mod.rs  opinions.rs  stats.rs  store.rs
src/micro/: academy.rs  bench.rs  candle_train.rs  kova_model.rs  logmine.rs  mod.rs  moe_tournament.rs  pipe.rs  quantize.rs  registry.rs  router.rs  runner.rs  stats.rs  template.rs  tournament.rs  train.rs  train_harness.rs  validate.rs
src/pipeline/: compilation.rs  error_kind.rs  fix_loop.rs  mod.rs  mod.rs.bak
src/pyramid/: compiler_teacher.rs  expert.rs  extract.rs  mesh.rs  mod.rs
src/surface/: mod.rs
src/surface/cli/: agent_loop.rs  git_cmd.rs  mod.rs  node_cmd.rs  repl.rs
src/surface/gui/: gui_impl.rs  micro_train.rs  mod.rs  pixel_forge.rs  products.rs  sprite_qc.rs  theme.rs
src/surface/serve/: mod.rs
src/swarm/: mod.rs  priority.rs  tool_router.rs  train.rs
src/web_client/: app.rs  mod.rs  theme.rs
tests/: cc_features_smoke.rs  integration.rs
wasm/: Cargo.toml
