# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

[package]
name = "kova"
version = "0.4.0"
edition = "2024"
description = "Kova — augment engine. Web GUI (Rust/WASM) + serve API. No JavaScript."

[features]
default = ["serve", "inference", "rag", "tui"]
serve = ["dep:axum", "dep:futures-util", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:similar"]
gui = ["dep:eframe", "dep:egui", "dep:similar", "dep:image", "dep:base64"]
tui = ["dep:ratatui", "dep:crossterm"]
inference = ["dep:kalosm", "dep:kalosm-sample", "dep:lru"]
autopilot = ["dep:enigo"]
daemon = ["dep:capnp", "dep:capnpc"]  # Requires capnp compiler: brew install capnp
tests = ["exopack"]
rag = ["dep:fastembed", "dep:ordered-float"]
# mobile-llm: on-device safetensors inference via candle (Android/iOS). Pure Rust.
mobile-llm = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
# io_uring: stub for future kernel-bypass. No-op; design doc in SPEED.md.
io_uring = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sled = "0.34"
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
toml = "0.8"
csv = "1"
pdf-extract = "0.7"
flate2 = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
similar = { version = "2", optional = true }

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
eframe = { version = "0.33", optional = true }
egui = { version = "0.33", optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
axum = { version = "0.7", features = ["json", "macros", "ws"], optional = true }
futures-util = { version = "0.3", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
kalosm = { version = "0.4", features = ["language", "llama"], optional = true }
kalosm-sample = { version = "0.4", optional = true }
lru = { version = "0.12", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking", "json"] }
exopack = { git = "https://github.com/cochranblock/exopack", optional = true, features = ["triple_sims", "interface", "baked_demo", "demo", "video", "screenshot"] }
fastembed = { version = "5", optional = true }
ordered-float = { version = "4", optional = true }
dirs = "5"
glob = "0.3"
enigo = { version = "0.2", optional = true, default-features = false, features = ["x11rb"] }
capnp = { version = "0.25", optional = true }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", optional = true }

[build-dependencies]
capnpc = { version = "0.25", optional = true }

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"

[lib]
name = "kova"
path = "src/lib.rs"

[[bin]]
name = "kova"
path = "src/main.rs"

[[bin]]
name = "kova-test"
path = "src/bin/kova-test.rs"
required-features = ["tests"]
