# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

[package]
name = "kova-engine"
version = "0.7.0"
edition = "2024"
description = "Kova — augment engine. On-device AI inference, agentic tool loop, distributed C2 mesh. Zero cloud. One binary."
license = "Unlicense"
repository = "https://github.com/cochranblock/kova"
homepage = "https://cochranblock.org"
keywords = ["ai", "agent", "inference", "edge-computing", "augmentation"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["tui"]
serve = ["dep:axum", "dep:futures-util", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:similar"]
tui = ["dep:ratatui", "dep:crossterm"]
# inference: local candle-based inference. Open-source model downloads removed (hf-hub dropped).
# Point kova at a custom model via config; no HuggingFace fallback.
inference = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:lru"]
autopilot = ["dep:enigo"]
browser = ["dep:enigo", "dep:base64", "dep:core-graphics", "dep:image"]
rag = ["dep:fastembed", "dep:ordered-float"]

# ── exopack (absorbed from cochranblock/exopack v0.2.1, 2026-04-30) ────────────
# Testing augmentation modules. Each feature activates one src/exopack/*.rs module.
screenshot = ["dep:scraper", "dep:resvg", "dep:usvg", "dep:tiny-skia", "dep:ab_glyph", "dep:fontdb", "dep:image"]
mock = ["dep:wiremock"]
interface = []
video = ["dep:xcap", "dep:image"]
demo = ["video"]
baked_demo = ["interface"]
triple_sims = []
devtools = ["dep:chromiumoxide", "dep:futures", "dep:tokio-tungstenite"]
standards_check = []
checkpoint = []
compaction = []
dual_mode = []
perm_gate = []
harvest = ["dep:chromiumoxide", "dep:futures", "dep:tokio-tungstenite", "dep:image"]
# ats_fixtures: pure-string HTML generators that mirror real ATS DOM
# conventions (Greenhouse / Lever / Workday / iCIMS / Ashby). No deps.
# Source attributions live in atsisbroken's docs/ATS_FIXTURE_SOURCES.md.
ats_fixtures = []
# tests: exopack suite for kova-test binary. Linux-portable (no xcap/pipewire).
# For video/demo recording (Mac-only deps via xcap+pipewire), add them explicitly.
tests = ["triple_sims", "interface", "baked_demo", "screenshot"]
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sled = "0.34"
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
blake3 = "1"
memmap2 = "0.9"
toml = "0.8"
csv = "1"
pdf-extract = "0.10"
flate2 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros", "signal"] }
tempfile = "3"
similar = { version = "2", optional = true }
notify = "8"
ctrlc = "3"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
axum = { version = "0.7", features = ["json", "macros", "ws"], optional = true }
futures-util = { version = "0.3", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
lru = { version = "0.16", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking", "json", "cookies"] }
fastembed = { version = "5", optional = true }
# exopack-absorbed optional deps
scraper = { version = "0.19", optional = true }
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
ab_glyph = { version = "0.2", optional = true }
fontdb = { version = "0.23", optional = true }
wiremock = { version = "0.6", optional = true }
chromiumoxide = { version = "0.9", optional = true, default-features = false, features = ["fetcher", "rustls", "zip8"] }
futures = { version = "0.3", optional = true }
xcap = { version = "0.9", optional = true }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
ordered-float = { version = "4", optional = true }
dirs = "5"
glob = "0.3"
regex = "1"
enigo = { version = "0.2", optional = true, default-features = false, features = ["x11rb"] }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
core-graphics = { version = "0.24", optional = true }

[build-dependencies]

[patch.crates-io]
android-activity = { git = "https://github.com/rust-mobile/android-activity", branch = "main" }

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"

[lib]
name = "kova"
path = "src/lib.rs"

[[bin]]
name = "kova"
path = "src/main.rs"

[[bin]]
name = "kova-test"
path = "src/bin/kova-test.rs"
required-features = ["tests"]

[[bin]]
name = "pack-starter"
path = "src/bin/pack-starter.rs"

[profile.dev]
opt-level = 1              # dev builds still fast to run
debug = true               # full debuginfo
overflow-checks = true     # catch integer overflow

[profile.release]
opt-level = 3              # max speed, not size
lto = "fat"                # full cross-crate LTO
codegen-units = 1          # single codegen unit = best perf
panic = 'abort'            # no unwind overhead
strip = true               # strip symbols from binary
overflow-checks = true     # catch overflow even in release
debug-assertions = true    # catch logic bugs in production

[profile.diamond]
inherits = "release"
opt-level = 3              # maximum LLVM speed
lto = "fat"                # cross-crate inlining, full monomorphized dedup
codegen-units = 1          # one crystal, no fracture planes
strip = true               # symbols don't run, they just ride along
panic = "abort"            # cull unwinding machinery
overflow-checks = false    # trust the arithmetic, check explicitly when needed
debug = false              # DWARF is heavy
incremental = false        # incremental caches are fracture planes
split-debuginfo = "off"    # no separate .dSYM or .pdb
