# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

# Kova Android — egui GUI cross-compiled for Pixel 9 XL Pro (aarch64-linux-android).

[workspace]

[package]
name = "kova-android"
version = "0.7.0"
edition = "2024"

[lib]
name = "kova_android"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# mobile-llm: candle + safetensors. Pure Rust, no C deps, cross-compiles to Android.
kova = { path = "..", features = ["gui", "mobile-llm"], default-features = false }
log = "0.4"
android_logger = "0.14"
android-activity = { version = "0.6", features = ["native-activity"] }
eframe = "0.33"

[package.metadata.android]
package = "org.cochranblock.kova"
label = "Kova"
target_sdk_version = 34
min_sdk_version = 28