# Copyright (c) 2026 The Cochran Block. All rights reserved.
# exopack — testing capabilities to augment original binary into test binary.
# Screenshot, video recording, interface creation, API mocking, TRIPLE SIMS.

[package]
name = "exopack"
version = "0.1.0"
edition = "2021"
description = "Testing augmentation: screenshot, video, interfaces, API mocks, triple sims"

[[bin]]
name = "exopack"
path = "src/bin/exopack.rs"
required-features = ["triple_sims"]

[features]
default = []
# screenshot: pure Rust HTML→SVG→PNG capture (no Chrome)
screenshot = ["scraper", "resvg", "usvg", "tiny-skia", "reqwest", "tokio", "base64", "ab_glyph", "fontdb", "image", "dirs"]
# mock: wiremock for on-demand API mocking
mock = ["wiremock", "serde_json"]
# interface: test server harness, HTTP client helpers
interface = ["tokio", "reqwest"]
# video: xcap screen capture + recording; demo: action script recording
video = ["xcap", "image", "serde", "serde_json", "dirs"]
demo = ["serde", "serde_json", "video"]
# baked_demo: full intended-usage demo, zero user input (interface + serde_json)
baked_demo = ["interface", "serde_json"]
# triple_sims: run test runner 3 times; all must pass
triple_sims = []
# devtools: headless browser console check via CDP (chromiumoxide)
devtools = ["chromiumoxide", "chromiumoxide/fetcher", "chromiumoxide/rustls", "chromiumoxide/zip8", "dirs", "futures", "tokio", "serde_json"]

[dependencies]
scraper = { version = "0.19", optional = true }
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "rustls-tls"], default-features = false, optional = true }
wiremock = { version = "0.6", optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
base64 = { version = "0.21", optional = true }
ab_glyph = { version = "0.2", optional = true }
fontdb = { version = "0.23", optional = true }
image = { version = "0.25", optional = true }
dirs = { version = "5", optional = true }
chromiumoxide = { version = "0.9", optional = true, default-features = false }
futures = { version = "0.3", optional = true }
xcap = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
