[package]
name = "kova-ios"
version = "0.7.0"
edition = "2024"
publish = false

[lib]
name = "kova_ios"
crate-type = ["staticlib"]

[dependencies]
kova = { path = "..", features = ["gui", "mobile-llm"], default-features = false }
log = "0.4"
oslog = "0.2"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
