# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3
# Thin WASM build manifest. Source lives in ../src/web_client/.

[workspace]

[package]
name = "kova-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "../src/web_client/mod.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "persistence"] }
egui = { version = "0.33", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
log = "0.4"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Location"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
